fixing horizontal scroll issue

--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -175,6 +175,7 @@
       align-items: center;
       display: flex;
       justify-content: center;
+      overflow: hidden;
       padding: 2.8em;
       position: relative;
 
